[gd_scene load_steps=7 format=2]

[ext_resource path="res://Equipment/Arms/Arms.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
loop = true

[sub_resource type="Animation" id=2]

[sub_resource type="Animation" id=3]
length = 0.6
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ null, null, null ],
"method": "trow_punch"
} ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 3, 40, null ],
"method": "trow_punch"
} ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 10, 70, 0.4 ],
"method": "trow_punch"
} ]
}

[node name="Arms" type="Position2D"]
script = ExtResource( 1 )

[node name="punch_cooldown" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="combo" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 1 )
anims/kick = SubResource( 2 )
anims/punch1 = SubResource( 3 )
anims/punch2 = SubResource( 4 )
anims/punch3 = SubResource( 5 )
[connection signal="tree_entered" from="." to="." method="_on_Arms_tree_entered"]
[connection signal="animation_changed" from="combo" to="." method="_on_combo_animation_changed"]
[connection signal="animation_finished" from="combo" to="." method="_on_combo_animation_finished"]
